# neurostore-next

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  LICENSE  Makefile  README.md  start-local-demo.bat
.cargo/: config.toml
.github/workflows/: ci-production.yml  cross-platform-shell.yml  node-releases.yml  node-windows-release.yml  release-node-binaries.yml
apps/demo-portal/: server.mjs
apps/demo-portal/public/: app.js  index.html  style.css
apps/node-agent/: node-agent.mjs  package.json
apps/node-desktop/: package-lock.json  package.json
apps/node-desktop/src/: App.css  App.tsx
apps/node-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/node-desktop/src-tauri/src/: lib.rs  main.rs
apps/tauri-shell/: README.md  package.json
apps/tauri-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-shell/src-tauri/src/: main.rs
contracts/: NeuroToken.sol  StoragePayments.sol
crates/client-sdk/: Cargo.toml
crates/client-sdk/src/: lib.rs
crates/client-wasm/: Cargo.toml
crates/client-wasm/src/: lib.rs
crates/gateway/: Cargo.toml  clean_gateway.txt
crates/gateway/migrations/: 20260223000000_init.sql  20260226000000_v8_supernodes.sql  20260228000000_node_incentives.sql  20260228120000_proof_compliance.sql
crates/gateway/src/: crypto.rs  erasure.rs  geofence.rs  main.rs  models.rs  p2p.rs  proofs.rs  repair.rs
crates/gateway/src/handlers/: auth.rs  compliance.rs  mod.rs  nodes.rs  s3.rs  zk.rs
crates/node/: Cargo.toml  build.rs  neuro-node.exe.manifest
crates/node/src/: main.rs  p2p.rs  store.rs  ws_bridge.rs
crates/node/test-node-1/: node_identity.key
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/sentinel/: Cargo.toml
crates/sentinel/src/: main.rs
crates/uploader/: Cargo.toml
crates/uploader/src/: main.rs
deploy/: .env.example  .env.option-a  .env.option-a.prod.example  Dockerfile.gateway  Dockerfile.node  Dockerfile.sentinel  Dockerfile.services  Dockerfile.web  README.md  docker-compose.edge.yml  docker-compose.option-a.yml  docker-compose.postgres.yml  docker-compose.yml  install.sh  nginx.conf  nginx.ha.conf
deploy/docker/: node.Dockerfile
deploy/k8s/base/: control-plane-configmap.yaml  control-plane-deployment.yaml  control-plane-hpa.yaml  control-plane-networkpolicy.yaml  control-plane-pvc.yaml  control-plane-secret.yaml  control-plane-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  s3-gateway-configmap.yaml  s3-gateway-deployment.yaml  s3-gateway-hpa.yaml  s3-gateway-networkpolicy.yaml  s3-gateway-pvc.yaml  s3-gateway-secret.yaml  s3-gateway-service.yaml
deploy/launchd/: com.neurostore.node.plist
deploy/nginx/: neurostore.conf.template
deploy/observability/: prometheus.yml
deploy/systemd/: neuro-node.service
deploy/windows/: install-service.bat  install-service.ps1  install-updater-task.bat  install-updater-task.ps1  multi-laptop-test.bat  multi-laptop-test.ps1  neuro-node.wxs  retrieve-image.bat  retrieve-image.ps1  show-node-address.bat  show-node-address.ps1  start-demo-portal.bat  start-demo-portal.ps1  uninstall-service.bat  uninstall-service.ps1  uninstall-updater-task.bat  uninstall-updater-task.ps1  update-node.ps1  upload-image.bat  upload-image.ps1
docs/: AI_PRODUCTION_PLAN.md  API_OPTION_A.yaml  ARCHITECTURE.md  COMPETITIVE_STRATEGY.md  COMPLIANCE_ROADMAP.md  ENVIRONMENTS.md  IMPLEMENTATION_BACKLOG.md  PERF_KPI_GATE.md  PRICING_OPTION_A.md  PRODUCTION_OPTION_A_PROJECT.md  RUNBOOK_OPTION_A.md  SECURITY_OPERATIONS.md  SECURITY_THREAT_MODEL.md
examples/: peer-telemetry.json  telemetry-policy.json  windows-multi-laptop-nodes.sample.json
frontend/: .env.example  eslint_output.json  index.html  lint.txt  package-lock.json  package.json  tailwind.config.js  test-upload-v2.txt
frontend/src/: App.jsx  index.css
frontend/src/lib/: apiClient.js  authStorage.js  config.js  crypto.js
frontend/src/pages/: Auth.jsx  Download.jsx  DriveDashboard.jsx  FAQ.jsx  NodeDashboard.jsx  Pricing.jsx
scripts/: benchmark-latency-compare.mjs  bootstrap-online.sh  build-offline.sh  deploy-readiness.sh  full-loop-integration.sh  generate-anchor-tenant.sh  generate-k8s-secrets.sh  join-mesh.sh  k8s-readiness.sh  local-node-api.mjs  option-a-smoke.sh  perf-kpi-gate.sh  platform-build.sh  use-crates-io.sh  use-vendored.sh
services/control-plane/: Dockerfile  README.md  debug.txt  out.txt  package-lock.json  package.json  persistence.mjs  server.mjs  test_output.txt
services/control-plane/test/: api.test.mjs
services/s3-gateway/: Dockerfile  README.md  package-lock.json  package.json  server.mjs
services/s3-gateway/test/: gateway.test.mjs  s3.test.mjs
tests/: integration_smoke.rs
web/: app.js  index.html  style.css  worker.js
