[package]
name = "neuro-client-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
neuro-client-sdk = { path = "../client-sdk" }
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
