[package]
name = "neuro-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
clap = { version = "4", features = ["derive"] }
sled = "0.34"
libp2p = { version = "0.53", features = [
  "tcp",
  "dns",
  "noise",
  "yamux",
  "gossipsub",
  "kad",
  "identify",
  "ping",
  "request-response",
  "tokio",
  "macros",
  "relay",
  "autonat",
  "dcutr"
] }
serde_json = "1"
bincode = "1"
neuro-protocol = { path = "../protocol" }
chrono = { version = "0.4", features = ["clock"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
libp2p-identity = "0.2"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link Time Optimization (Removes dead code)
strip = true     # Strip symbols from binary
codegen-units = 1 # Maximize size reduction
panic = "abort"  # Remove panic unwinding overhead

